# DBEngine

./: .gitignore  CMakeLists.txt  README.md
allocator/: CMakeLists.txt
allocator/allocator/include/: allocator.h  allocator_guardant.h  allocator_test_utils.h  allocator_with_fit_mode.h
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_red_black_tree/include/: allocator_red_black_tree.h
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
associative_container/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/: CMakeLists.txt
associative_container/search_tree/include/: search_tree.h
common/: CMakeLists.txt
common/include/: extra_utility.h  file_cannot_be_opened.h  not_implemented.h  operation_not_supported.h  typename_holder.h
common/src/: extra_utility.cpp
dbms/: CMakeLists.txt
dbms/client/: CMakeLists.txt  client.cpp
dbms/client/include/: client.h
dbms/common_types/: CMakeLists.txt
dbms/common_types/include/: ipc_data.h  tdata.h
dbms/common_types/src/: tdata.cpp
dbms/db_storage/: CMakeLists.txt
dbms/db_storage/include/: db_storage.h
dbms/db_storage/server/: CMakeLists.txt  db_storage_server.cpp
dbms/db_storage/src/: db_storage.cpp
dbms/db_storage_server/: CMakeLists.txt
dbms/db_storage_server/include/: db_storage_server.h
dbms/db_storage_server/src/: db_storage_server.cpp
dbms/manager_server/: CMakeLists.txt  CmakeLists.txt  manager_server.cpp
dbms/tdata/: CMakeLists.txt
dbms/tdata/include/: tdata.h
dbms/tdata/src/: tdata.cpp
flyweight_string_pool/: CMakeLists.txt
flyweight_string_pool/include/: flyweight_string_pool.h
flyweight_string_pool/src/: flyweight_string_pool.cpp
logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger_builder.cpp
logger/linux_logging_server/src/: linux_logging_server.cpp
logger/logger/include/: logger.h  logger_builder.h  logger_guardant.h
logs/: info
string_pool/: CMakeLists.txt
string_pool/include/: string_pool.h
string_pool/src/: string_pool.cpp
(+6 files in other folders)
